fixed overlapping footer img

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -24,3 +24,7 @@ body {
 	background-color: #062270;
 	padding: 15px 0;
 }
+
+.main {
+	padding-bottom: 40px;
+}
